# rose

./: Cargo.toml  LICENSE  README.md  README.org
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
