[package]
name = "rose"
version = "0.1.0"
authors = ["comcx <comcx@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

#[build]
#rustflags = ["-C", "linkarg=-e __start -static -nostartfiles"]

#[target.'cfg(target_os = "macos")']
#rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]

[dependencies]
bootloader = "0.9.8"