[package]
name = "rose"
version = "0.1.0"
authors = ["comcx <comcx@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# the profile used for `cargo build`
#[profile.dev]
#panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
#[profile.release]
#panic = "abort" # disable stack unwinding on panic

#[build]
#rustflags = ["-C", "linkarg=-e __start -static -nostartfiles"]

#[target.'cfg(target_os = "macos")']
#rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.12.1"
uart_16550 = "0.2.0"
pic8259_simple = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false